--- a/index.html
+++ b/index.html
@@ -3,7 +3,5 @@ hello this is bhupain
 hello
 hello
 how are doing 
-we should work even more harder
-its going gud
-we will get the desired
+we should work even more desired
 
